Added documentation for Board, Square, and Position. Moved Position to be an inner class of Piece.